Fix/ Courses: Remove extra margin-left

--- a/styles.css
+++ b/styles.css
@@ -257,11 +257,12 @@ h2-text {}
     /* align-content: space-around; */
     flex-wrap: wrap;
     flex-direction: row;
+    margin-left: -5px !important;
 }
 
 .course-card {
     cursor: pointer;
-    margin-left: -10px;
+    margin-left: -5px;
     width: 27% !important;
 }
 
